# ProxSVRGplus

./: .gitignore  GEMINI.md  GenAI_Tutorial.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
experiments/: a9a_bgrid.py  mnist_bgrid.py  plot_fig3.py  plot_fig4.py  plot_fig5.py
results/: results_a9a_b1024_proxgd.npy  results_a9a_b1024_proxsgd.npy  results_a9a_b1024_proxsvrg.npy  results_a9a_b1024_proxsvrgplus.npy  results_a9a_b16384_proxsgd.npy  results_a9a_b16384_proxsvrg.npy  results_a9a_b16384_proxsvrgplus.npy  results_a9a_b16_proxsgd.npy  results_a9a_b16_proxsvrg.npy  results_a9a_b16_proxsvrgplus.npy  results_a9a_b1_proxsgd.npy  results_a9a_b1_proxsvrg.npy  results_a9a_b1_proxsvrgplus.npy  results_a9a_b2048_proxsgd.npy  results_a9a_b2048_proxsvrg.npy  results_a9a_b2048_proxsvrgplus.npy  results_a9a_b256_proxsgd.npy  results_a9a_b256_proxsvrg.npy  results_a9a_b256_proxsvrgplus.npy  results_a9a_b4096_proxsgd.npy  results_a9a_b4096_proxsvrg.npy  results_a9a_b4096_proxsvrgplus.npy  results_a9a_b4_proxsgd.npy  results_a9a_b4_proxsvrg.npy  results_a9a_b4_proxsvrgplus.npy  results_a9a_b512_proxsgd.npy  results_a9a_b512_proxsvrg.npy  results_a9a_b512_proxsvrgplus.npy  results_a9a_b64_proxsgd.npy  results_a9a_b64_proxsvrg.npy  results_a9a_b64_proxsvrgplus.npy  results_a9a_b8192_proxsgd.npy  results_a9a_b8192_proxsvrg.npy  results_a9a_b8192_proxsvrgplus.npy  results_a9a_proxgd.npy  results_a9a_proxsgd.npy  results_a9a_proxsvrg.npy  results_a9a_proxsvrgplus.npy  results_mnist_b1024_proxsgd.npy  results_mnist_b1024_proxsvrg.npy  (+40 more)
tests/: plot_a9a_results.py  run_a9a.py  (+4 more)
(+8 files in other folders)
